--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - name: Remove node_modules and package-lock.json
+      - name: Clean up node_modules and package-lock.json
         run: |
-          rm -rf node_modules
-          rm package-lock.json
+          if [ -d "node_modules" ]; then rm -rf node_modules; fi
+          if [ -f "package-lock.json" ]; then rm package-lock.json; fi
 
       - run: npm install
 
