--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
